# GroceryApp

./: CMakeLists.txt  Main.qml  README.md  constants.h  itemmodel.cpp  itemmodel.h  itemstorage.cpp  itemstorage.h  main.cpp  qtquickcontrols2.conf  recipemodel.cpp  recipemodel.h  resources.qrc  sortermodel.cpp  sortermodel.h
qmlfiles/: AppTheme.qml  BottomBar.qml  CartItem.qml  DeleteAllItemsDialog.qml  HeaderToolBar.qml  ListOfRecipes.qml  MergeItemsDialog.qml  PortionSelector.qml  RecipeView.qml
